# bdm-80

./: .gitignore  README.md
bdm-80-io/: .mxproject  CMakeLists.txt  Makefile  STM32F405RGTx_FLASH.ld  bdm-80-io.ioc
bdm-80-io/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
bdm-80-io/Core/Src/: dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
bdm-80-io/FATFS/App/: fatfs.c
bdm-80-io/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
bdm-80-io/STM32CubeIDE/: .cproject  .project  STM32F405RGTX_FLASH.ld  STM32F405RGTX_RAM.ld
bdm-80-io/STM32CubeIDE/Debug/: bdm-80-io.elf  bdm-80-io.list  bdm-80-io.map  makefile  objects.list  sources.mk
bdm-80-io/STM32CubeIDE/Debug/Application/User/Core/: crc.d  dma.d  gpio.d  gpio.su  i2c.d  i2c.su  main.d  main.su  spi.d  spi.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_hal_timebase_tim.su  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  syscalls.d  syscalls.su  tim.d  tim.su  usart.d  usart.su
bdm-80-io/STM32CubeIDE/Debug/Application/User/Startup/: startup_stm32f405rgtx.d  subdir.mk
bdm-80-io/STM32CubeIDE/Debug/Application/User/gui/: FrontendApplication.d  FrontendApplication.su  LogoPresenter.d  LogoPresenter.su  LogoView.d  LogoView.su  MainPresenter.d  MainPresenter.su  MainView.d  MainView.su  Model.d  Screen1Presenter.d  Screen1Presenter.su  Screen1View.d  (+9 more)
bdm-80-io/STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32f4xx.d  system_stm32f4xx.su
bdm-80-io/STM32CubeIDE/Debug/Drivers/STM32F4xx_HAL_Driver/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_cortex.su  stm32f4xx_hal_crc.d  stm32f4xx_hal_crc.su  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma.su  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_dma_ex.su  stm32f4xx_hal_exti.d  stm32f4xx_hal_exti.su  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash.su  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ex.su  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_gpio.su  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c.su  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd.su  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_pcd_ex.su  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr.su  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_pwr_ex.su  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc.su  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_rcc_ex.su  stm32f4xx_hal_spi.d  stm32f4xx_hal_spi.su  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim.su  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_tim_ex.su  stm32f4xx_hal_uart.d  (+4 more)
bdm-80-io/STM32CubeIDE/Debug/Middlewares/FatFs/: diskio.d  diskio.su  ff.d  ff.su  ff_gen_drv.d  ff_gen_drv.su  subdir.mk  syscall.d
bdm-80-io/STM32CubeIDE/Debug/Middlewares/USB_Device_Library/: subdir.mk  usbd_cdc.d  usbd_cdc.su  usbd_core.d  usbd_core.su  usbd_ctlreq.d  usbd_ctlreq.su  usbd_ioreq.d  usbd_ioreq.su  usbd_msc.d  usbd_msc.su  usbd_msc_bot.d  usbd_msc_bot.su  usbd_msc_data.d  usbd_msc_scsi.d  usbd_msc_scsi.su
bdm-80-io/STM32CubeIDE/Debug/Src/: TouchGFX_DataTransfer.d  TouchGFX_DataTransfer.su  ili9341.d  ili9341.su  subdir.mk  tm1630.d  tm1630.su  xpt2046.d  xpt2046.su
bdm-80-io/STM32CubeIDE/Include/: TouchGFX_DataTransfer.h  ili9341.h  tm1630.h  xpt2046.h
bdm-80-io/STM32CubeIDE/Src/: TouchGFX_DataTransfer.c  ili9341.c  tm1630.c  xpt2046.c
bdm-80-io/TouchGFX/: ApplicationTemplate.touchgfx.part  bdm-80-io.touchgfx  target.config
bdm-80-io/TouchGFX/App/: app_touchgfx.c  app_touchgfx.h
bdm-80-io/TouchGFX/assets/texts/: texts.xml
bdm-80-io/TouchGFX/config/gcc/: app.mk
bdm-80-io/TouchGFX/config/msvs/: Application.props
bdm-80-io/TouchGFX/gui/src/logo_screen/: LogoPresenter.cpp  LogoView.cpp
bdm-80-io/TouchGFX/gui/src/main_screen/: MainView.cpp
bdm-80-io/TouchGFX/gui/src/setting_screen/: SettingPresenter.cpp  SettingView.cpp
bdm-80-io/TouchGFX/gui/src/transfer_screen/: TransferPresenter.cpp  TransferView.cpp
bdm-80-io/TouchGFX/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
bdm-80-io/USB_DEVICE/App/: usbd_desc.c  usbd_storage_if.c
bdm-80-rom/: .mxproject  CMakeLists.txt  Makefile  bdm-80.ioc
bdm-80-rom/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
bdm-80-rom/Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
bdm-80-rom/include/: clock.h  com.h  main_cycle.h  tm1630.h
bdm-80-rom/src/: clock.c  com.c  main_cycle.c  tm1630.c
bdm-80-rom/z80/: EMUBASIC.asm  MAIN (2).ROM  MBAKIA1.ASM  MBAKIAI.hex  MBAKIAI2.ASM  hex2source.py  hex2sourceZASM.py  main.asm  main.hex  main.ihx  main.lst  main.rel  main.sym  main2.asm  rom.c  rom.h  sample.bas
eagle/: bdm80.sch  main.brd  main.sch
pi/: a.out  main.c
(+21 files in other folders)
